@@ -5,7 +5,11 @@ Changelog
 1.2.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Style referencebrowser overlay.
+  [mathias.leimgruber]
+
+- Reduce general spacing right/left for overlays. This means more space for the overlay content.
+  [mathias.leimgruber]
 
 
 1.2.0 (2016-10-11)
